Progress on styling with colors

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -5,6 +5,13 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  --color-background: #262624;
+  --color-element: #30302E;
+  --color-outline: #4C4C44;
+  --color-accent: #D97656;
+  --color-accent-button: #ffffff;
+  --color-text: #ffffff;
+  --color-text-alt: #9C9A92;
 }
 
 body {
