Progress on styling

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -7,7 +7,7 @@
   -moz-osx-font-smoothing: grayscale;
   --color-background: #262624;
   --color-element: #30302E;
-  --color-outline: #4C4C44;
+  --color-border: #4C4C44;
   --color-accent: #D97656;
   --color-accent-button: #ffffff;
   --color-text: #ffffff;
