--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -18,12 +18,13 @@
 * {
   font-family: Inter;
   font-weight: 400;
+  line-height: 1;
 }
 
 .material-symbols-outlined {
   font-variation-settings:
-  'FILL' 0,
-  'wght' 400,
+  'FILL' 1,
+  'wght' 350,
   'GRAD' 0,
   'opsz' 24
 }
